--- a/src/app/licenses/license-list/license-list.component.html
+++ b/src/app/licenses/license-list/license-list.component.html
@@ -1,1 +1,25 @@
 <h1>{{ pageTitle }}</h1>
+<table *ngIf='licenses && licenses.length'>
+  <thead>
+    <th>Created by</th>
+    <th>Creation date</th>
+    <th>Customer code</th>
+    <th>Expiry date</th>
+    <th>Expires in</th>
+    <th>Customer</th>
+    <th>Product</th>
+    <th>Product version</th>
+  </thead>
+  <tbody>
+    <tr *ngFor='let license of licenses'>
+      <td>{{license.createdBy}}</td>
+      <td>{{license.createdOnUtc}}</td>
+      <td>{{license.customerCode}}</td>
+      <td>{{license.expiresOnUtc}}</td>
+      <td>{{license.expiresAfterDays}}</td>
+      <td>{{license.name}}</td>
+      <td>{{license.productName}}</td>
+      <td>{{license.productReleaseVersion}}</td>
+    </tr>
+  </tbody>
+</table>
